recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:5: error: type mismatch;
 found   : List[Int]
 required: Int
    return reverse(v :: reverse(l))
                  ^Concat:24: error: type mismatch;
 found   : Int
 required: List[Int]
    concat(ajout_droite(l1, l2.head), l2.tail)
                       ^